# api_for_books_library

./: .dockerignore  .env.sample  Dockerfile  README.md  coverage_report.txt  docker-compose.yaml  pyproject.toml
config/: settings.py  urls.py
fixtures/: book_fix.json  genre_fix.json  user_fix.json
users/: models.py  permissions.py  serializers.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
