[tool.poetry]
name = "api-for-books-library"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "api_for_books_library"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.2.4"
psycopg2-binary = "^2.9.10"
pillow = "^11.3.0"
djangorestframework = "^3.16.0"
sqlparse = "^0.5.3"
python-dotenv = "^1.1.1"
black = "^25.1.0"
djangorestframework-simplejwt = "^5.5.0"
django-filter = "^25.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
